# claude-proxy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Caddyfile  Cargo.toml  Dockerfile  README.md  caddy-entrypoint.sh  docker-compose.yaml  install_claude_code.sh  test.sh  validate_tests.sh
.github/: README.md
.github/workflows/: test.yml
docs/: API_COMPARISON.md  API_REFERENCE.md  CLAUDE_API_SPEC.md  CLAUDE_CODE_SETUP.md  CLAUDE_CODE_SUPPORT.md  COMPARISON.md  DOCKER.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v0.1.5.md  IMPROVEMENTS_SUMMARY.md  PRODUCTION_GUIDE.md  PROXY_AUDIT_COMPLETE.md  README.md  SPEC_ANALYSIS_SUMMARY.md  SPEC_SOURCES.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_REPORT.md  TEST_COVERAGE_SUMMARY.md  THINKING_LOGS.md
src/: constants.rs  main.rs
src/handlers/: health.rs  messages.rs  mod.rs  token_count.rs
src/models/: app.rs  claude.rs  mod.rs  openai.rs
src/services/: auth.rs  error_formatting.rs  mod.rs  model_cache.rs  streaming.rs
src/utils/: content_extraction.rs  mod.rs  model_normalization.rs  token_counting.rs
tests/: README.md  test_claude_code_patterns.sh  test_conversation.sh  test_model_404.sh  test_model_case_correction.sh  test_multimodal.sh  test_parallel.sh  test_request.sh  test_thinking.sh  test_token_count.sh  test_tool_results.sh  validate_claude_api.sh
tests/payloads/: basic_request.json  content_blocks_mixed.json  content_blocks_text.json  conversation_1_initial.json  conversation_2_followup.json  conversation_3_system.json  (+8 more)
worker/: Cargo.toml  package.json
