[package]
name = "claude_openai_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1","macros"] }
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json","http2","stream","rustls-tls"] }
tokio-stream = "0.1"
futures = "0.3"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"

